--- a/Categorias/animacion/index.html
+++ b/Categorias/animacion/index.html
@@ -76,7 +76,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Jose: El Rey de los Suenos -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie74.html">
+    <img src="https://image.tmdb.org/t/p/original/7vN3qU5i1gJXHulz9d95YhwaU3q.jpg" alt="Los jóvenes titanes en acción vs. Los jóvenes titanes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los jóvenes titanes en acción vs. Los jóvenes titanes</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Jose: El Rey de los Suenos -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie68.html">
     <img src="https://image.tmdb.org/t/p/original/A4Xa0kKzsGE8Tl6X2QARdhsAtUg.jpg" alt="José: El Rey de los Sueños" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
