--- a/Categorias/comedia/index.html
+++ b/Categorias/comedia/index.html
@@ -47,7 +47,17 @@
   </header>
   <main class="max-w-[1280px] mx-auto px-4 mt-24">
     <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Mantenimiento requerido -->
+      <!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie74.html">
+    <img src="https://image.tmdb.org/t/p/original/7vN3qU5i1gJXHulz9d95YhwaU3q.jpg" alt="Los jóvenes titanes en acción vs. Los jóvenes titanes" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los jóvenes titanes en acción vs. Los jóvenes titanes</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- Mantenimiento requerido -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie73.html">
     <img src="https://image.tmdb.org/t/p/original/wdhUHVEwpfsutJ7gJPqsOTOf2i2.jpg" alt="Mantenimiento requerido" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
