--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Mantenimiento requerido -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
+<li>
+  <a href="../Peliculas/movie74.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/7vN3qU5i1gJXHulz9d95YhwaU3q.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Los jóvenes titanes en acción vs. Los jóvenes titanes 2019</span>
+    <span class="hidden">El quinteto cómico de hoy en día se enfrenta a sus contrapartes de 2003 cuando los villanos de cada uno de sus mundos unen fuerzas para enfrentar a los dos equipos de Titán. Tendrán que dejar a un lado sus diferencias y trabajar juntos para combatir a Trigon, Hexagon, Santa Claus y el tiempo para salvar el universo.</span>
+  </a>
+</li>
+<!--FIN--><!-- Mantenimiento requerido -->
 <li>
   <a href="../Peliculas/movie73.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
