--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Big Mouth -->
+<li>
+  <a href="../Series/serie113.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/91GvggfQWxRygmXytWlvZWEej7c.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Big Mouth 2017</span>
+    <span class="hidden">Un grupo de adolescentes se enfrenta a la bestia peluda más grande de todas: la pubertad. Comedia filosa hecha por dos amigos de verdad, Nick Kroll y Andrew Goldberg.</span>
+  </a>
+</li>
+<!--FIN--><!-- Los jovenes titanes en accion vs. Los jovenes titanes -->
 <li>
   <a href="../Peliculas/movie74.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
