--- a/Series/serie113.html
+++ b/Series/serie113.html
@@ -69,7 +69,7 @@ body::after {
   <div class="flex items-center gap-3">
     <label for="temporada" class="text-sm text-gray-300">Temporada:</label>
     <select id="temporada" class="bg-[#1f1f1f] text-white px-3 py-1 rounded text-sm">
-      <option value="1">Temporada 1</option><option value="2">Temporada 2</option><option value="3">Temporada 3</option><option value="4">Temporada 4</option><option value="5">Temporada 5</option><option value="6">Temporada 6</option><option value="7">Temporada 7</option><option value="8">Temporada 8</option>
+      <option value="1">Temporada 1</option><option value="2">Temporada 2</option><option value="3">Temporada 3</option><option value="4">Temporada 4</option><option value="5">Temporada 5</option><option value="6">Temporada 6</option><option value="7">Temporada 7</option>
     </select>
   </div>
   <div class="flex space-x-2 overflow-x-auto scrollbar-hide pb-1" id="lista-capitulos"></div>
@@ -377,7 +377,54 @@ var videosPorCapitulo = {
       "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/fqwj882lyk2w"
     }
   },
-  "6": {
+  "7": {
+    "1": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/zxji0ejfhzfz",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/cb2t489d0z6w",
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ashghjt62fcl"
+    },
+    "2": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/eu9pe84ym9dx",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/p8pjhtw0rtzt"
+    },
+    "3": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/je6tqy2onyme",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/5bry5nlrd75o",
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/7jdtqtcecqbj"
+    },
+    "4": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/7puxphzpzv1b",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/lp6a735ixznd",
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/almac2ye21xi"
+    },
+    "5": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/wat8p13xpdzk",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/v2siqbipw7fp",
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/yqx4yaipf6fw"
+    },
+    "6": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/pv932bxyva9l",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6ec3ircgvr5c"
+    },
+    "7": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ovw4ioe664je",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/i3ln6r1vvbom",
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/29grnu3m65re"
+    },
+    "8": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ae44kr67vo9b",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/6ph68tg34oag"
+    },
+    "9": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/ngm2gm8bqj6z",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/mcwm3rksnbs3"
+    },
+    "10": {
+      "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/42hmgt5xbr7i",
+      "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/li2ybt4cx8ae",
+      "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/ixf3k7p00v7t"
+    }
+  },  "6": {
     "1": {
       "url1": "https://pelixplay.com/url/vast.php?url=https://streamwish.to/e/zekf0c9ay9sd",
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/vu0ef3xoqx8z",
@@ -428,7 +475,6 @@ var videosPorCapitulo = {
       "url2": "https://pelixplay.com/url/vast.php?url=https://filelions.to/v/b9cya31ka74b",
       "url3": "https://pelixplay.com/url/vast.php?url=https://filemoon.sx/e/f9n3foc7037d"
     }
-  }
 };
 var serieId = "74204";
 var temporadaSelect = document.getElementById('temporada');
