--- a/Categorias/kids/index.html
+++ b/Categorias/kids/index.html
@@ -18,4 +18,14 @@
   </a>
   <div class="mt-2 font-semibold text-sm leading-tight truncate">¡Oye, Arnold!</div>
   <div class="text-xs text-white/70">1996</div>
+</article><!-- Big Time Rush -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Series/serie115.html">
+    <img src="https://image.tmdb.org/t/p/original/9N61wXR7FqsuByDVSEjM6qcPhKH.jpg" alt="Big Time Rush" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Serie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Big Time Rush</div>
+  <div class="text-xs text-white/70">2009</div>
 </article>
