--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- M3GAN -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Shadow Force: Sentencia de muerte -->
+<li>
+  <a href="../Peliculas/movie86.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/urlxOSR7bo1CZ0sPFfQegR4kLLF.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Shadow Force: Sentencia de muerte 2025</span>
+    <span class="hidden">Una pareja separada con una recompensa por sus cabezas debe huir con su hijo para evitar a su antiguo jefe, una unidad de operaciones encubiertas que ha sido enviada para matarlos.</span>
+  </a>
+</li>
+<!--FIN--><!-- M3GAN -->
 <li>
   <a href="../Peliculas/movie85.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
