--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Shadow Force: Sentencia de muerte -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- 31: Morir es el unico escape -->
+<li>
+  <a href="../Peliculas/movie87.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/mHVcoTEqmIBdXSjXxfsKWu7GGga.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">31: Morir es el único escape 2016</span>
+    <span class="hidden">Cinco personas son secuestradas en los días previos a Halloween y secuestradas en un lugar llamado Murder World. Mientras están atrapados, deben jugar un juego violento llamado 31 donde la misión es sobrevivir 12 horas contra una pandilla de malvados payasos.</span>
+  </a>
+</li>
+<!--FIN--><!-- Shadow Force: Sentencia de muerte -->
 <li>
   <a href="../Peliculas/movie86.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
