--- a/Categorias/movie/index.html
+++ b/Categorias/movie/index.html
@@ -75,7 +75,17 @@
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- 31: Morir es el unico escape -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Milagro en la Celda 7 -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie88.html">
+    <img src="https://image.tmdb.org/t/p/original/scxBIHaT1ZiPDPJu3vKd9Yn5gBA.jpg" alt="Milagro en la Celda 7" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Milagro en la Celda 7</div>
+  <div class="text-xs text-white/70">2019</div>
+</article><!-- 31: Morir es el unico escape -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie87.html">
     <img src="https://image.tmdb.org/t/p/original/mHVcoTEqmIBdXSjXxfsKWu7GGga.jpg" alt="31: Morir es el único escape" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
