--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- TRON: Ares -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Schiave bianche: violenza in Amazzonia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie89.html">
+    <img src="https://image.tmdb.org/t/p/original/gW6MzN99UQeYAAuSy5mZBWInvxI.jpg" alt="Schiave bianche: violenza in Amazzonia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Schiave bianche: violenza in Amazzonia</div>
+  <div class="text-xs text-white/70">1985</div>
+</article><!-- TRON: Ares -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie70.html">
     <img src="https://image.tmdb.org/t/p/original/uWYQK1wrhbqeH6A96XsWlX2BKI6.jpg" alt="TRON: Ares" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
