--- a/Categorias/terror/index.html
+++ b/Categorias/terror/index.html
@@ -77,7 +77,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 </header>
 <main class="max-w-[1280px] mx-auto px-4 mt-24">
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- 31: Morir es el unico escape -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Schiave bianche: violenza in Amazzonia -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie89.html">
+    <img src="https://image.tmdb.org/t/p/original/gW6MzN99UQeYAAuSy5mZBWInvxI.jpg" alt="Schiave bianche: violenza in Amazzonia" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Schiave bianche: violenza in Amazzonia</div>
+  <div class="text-xs text-white/70">1985</div>
+</article><!-- 31: Morir es el unico escape -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie87.html">
     <img src="https://image.tmdb.org/t/p/original/mHVcoTEqmIBdXSjXxfsKWu7GGga.jpg" alt="31: Morir es el único escape" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
