--- a/HOME/Buscador2.html
+++ b/HOME/Buscador2.html
@@ -31,7 +31,16 @@
 <main class="flex-1 px-4 py-6 max-w-7xl mx-auto mt-16">
 	
   <ul id="busquedas" class="grid grid-cols-3 sm:grid-cols-4 md:grid-cols-5 lg:grid-cols-6 gap-4">
-<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Milagro en la Celda 7 -->
+<!--ABAJO AGREGAR NUEVO CONTENIDO --><!-- Schiave bianche: violenza in Amazzonia -->
+<li>
+  <a href="../Peliculas/movie89.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
+   <img 
+  src="https://image.tmdb.org/t/p/original/gW6MzN99UQeYAAuSy5mZBWInvxI.jpg" alt="poster" class="w-full aspect-[2/3] rounded-lg object-cover mb-2 sm:mb-0" loading="lazy"/>
+    <span class="hidden">Schiave bianche: violenza in Amazzonia 1985</span>
+    <span class="hidden"></span>
+  </a>
+</li>
+<!--FIN--><!-- Milagro en la Celda 7 -->
 <li>
   <a href="../Peliculas/movie88.html" tabindex="0" class="block outline-none focus:ring-2 ring-yellow-400 rounded">
    <img 
