--- a/Categorias/aventura/index.html
+++ b/Categorias/aventura/index.html
@@ -79,7 +79,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Peter Pan 2: El regreso al pais de Nunca Jamas -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Los Tres Mosqueteros -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie92.html">
+    <img src="https://image.tmdb.org/t/p/original/hLjpIN5HkFeW4sZZqThLvhCuWwK.jpg" alt="Los Tres Mosqueteros" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Los Tres Mosqueteros</div>
+  <div class="text-xs text-white/70">1942</div>
+</article><!-- Peter Pan 2: El regreso al pais de Nunca Jamas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie90.html">
     <img src="https://image.tmdb.org/t/p/original/kkFeLiMeih9jgXatztoloOyGSbc.jpg" alt="Peter Pan 2: El regreso al país de Nunca Jamás" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
