--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Peter Pan 2: El regreso al pais de Nunca Jamas -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bee Movie: La historia de una abeja -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie93.html">
+    <img src="https://image.tmdb.org/t/p/original/AiaVAIc9KsYsNkAFNGiHtmmoZ2d.jpg" alt="Bee Movie: La historia de una abeja" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">Bee Movie: La historia de una abeja</div>
+  <div class="text-xs text-white/70">2007</div>
+</article><!-- Peter Pan 2: El regreso al pais de Nunca Jamas -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie90.html">
     <img src="https://image.tmdb.org/t/p/original/kkFeLiMeih9jgXatztoloOyGSbc.jpg" alt="Peter Pan 2: El regreso al país de Nunca Jamás" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
