--- a/Categorias/familia/index.html
+++ b/Categorias/familia/index.html
@@ -80,7 +80,17 @@ stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 
 
 <section class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 lg:grid-cols-6 gap-4">
-<!--PEGAR CONTENIDO AQUI ABAJO--><!-- Bee Movie: La historia de una abeja -->
+<!--PEGAR CONTENIDO AQUI ABAJO--><!-- El Libro de la Vida -->
+<article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
+  <a href="../../Peliculas/movie94.html">
+    <img src="https://image.tmdb.org/t/p/original/vUqYsOhwDAoFlN2hJktT0XoilXv.jpg" alt="El Libro de la Vida" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
+    <div class="absolute top-2 right-2 bg-white/90 text-black text-xs font-semibold rounded-full px-2 py-0.5">
+      Movie
+    </div>
+  </a>
+  <div class="mt-2 font-semibold text-sm leading-tight truncate">El Libro de la Vida</div>
+  <div class="text-xs text-white/70">2014</div>
+</article><!-- Bee Movie: La historia de una abeja -->
 <article class="relative rounded-lg overflow-hidden cursor-pointer select-none">
   <a href="../../Peliculas/movie93.html">
     <img src="https://image.tmdb.org/t/p/original/AiaVAIc9KsYsNkAFNGiHtmmoZ2d.jpg" alt="Bee Movie: La historia de una abeja" class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105"/>
